syntax = "proto3";

package driverpb;

service driver {
    rpc GetStatus(StatusRequest) returns (StatusResponse) {}
    rpc InitializeCluster(InitClusterRequest) returns (InitClusterResponse) {}
}

message StatusRequest {
}

message StatusResponse {
    int32 state = 1;
}

message InitClusterRequest {
    bool force = 1;
    string snapshot = 2;
}

message InitClusterResponse {
    bool success = 1;
    string error_message = 2;
}